force-app/main/default/objects/Return_Item_Stock__c/Return_Item_Stock__c.object-meta.xml
<CustomObject>
    <label>Return Item Stock</label>
    <nameField>
        <label>Return Item Stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Return Item Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>