force-app/main/default/objects/Return_Item_Stock__c/fields/Excepted_Return_Cost__c.field-meta.xml
<CustomField>
    <fullName>Excepted_Return_Cost__c</fullName>
    <formula>Inventory_Item__r.Item_Unit_Cost__c  *  Return_Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Excepted Return Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>