force-app/main/default/objects/Return_Item_Stock__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Return Item Stocks</relationshipLabel>
    <relationshipName>Return_Item_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>