force-app/main/default/objects/Return_Item_Stock__c/fields/Inventory_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Warehouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Warehouse</label>
    <referenceTo>Inventory_Warehouse__c</referenceTo>
    <relationshipLabel>Return Item Stocks</relationshipLabel>
    <relationshipName>Return_Item_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>