force-app/main/default/objects/Return_Item_Stock__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Return Item Stocks</relationshipLabel>
    <relationshipName>Return_Item_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>