force-app/main/default/objects/Return_Item_Stock__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipLabel>Return Item Stocks</relationshipLabel>
    <relationshipName>Return_Item_Stocks</relationshipName>
    <type>Lookup</type>
</CustomField>