force-app/main/default/objects/Return_Item_Stock__c/fields/Return_Type__c.field-meta.xml
<CustomField>
    <fullName>Return_Type__c</fullName>
    <label>Return Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damage</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Replacement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>